java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ImportClassTest/testImportHint194018c-hints.pass
Change to import static java.util.Collections.sort
